change port and server and optimised mysql container

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,12 @@ jobs:
             echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
             curl -O -L https://raw.githubusercontent.com/nheek/shareme/main/Dockerfile
             curl -O -L https://raw.githubusercontent.com/nheek/shareme/main/docker-compose.yml
+            
+            mkdir .custom_sql_settings
+            cd .custom_sql_settings
+            curl -O -L https://raw.githubusercontent.com/nheek/shareme/main/.custom_sql_settings/my.cnf
 
+            cd ..
             mkdir .sql_data
             cd .sql_data
             curl -O -L https://raw.githubusercontent.com/nheek/shareme/main/.sql_data/create_database.sql
