--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     build: .
     ports:
-      - "3017:80"
+      - "3002:80"
     depends_on:
       - mysql-db
     restart: unless-stopped
@@ -14,10 +14,11 @@ services:
     image: mysql:latest
     restart: unless-stopped
     ports:
-      - "4017:3306"
+      - "4002:3306"
     env_file:
       - .env
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - .sql_data:/docker-entrypoint-initdb.d/
+      - .custom_sql_settings:/etc/mysql/conf.d/  # Mount custom my.cnf file
