--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,9 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
+      - mysql_db_data:/var/lib/mysql
       - .sql_data:/docker-entrypoint-initdb.d/
-      - .custom_sql_settings:/etc/mysql/conf.d/  # Mount custom my.cnf file
+      - .custom_sql_settings:/etc/mysql/conf.d/
+
+volumes:
+  mysql_db_data:
